# multi_class_prediction_cirrhosis_outcomes_playgroudS3Ep26

./: .gitignore  README.md  cirrhosis_notebook.ipynb  pyproject.toml  test.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
log_mlflow/: log_mlflow.py
mlruns/.trash/795298213250767075/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/44c124a889fd4b0bb8c772587f0fa1f8/: meta.yaml
mlruns/0/a078664aed3a4ee98b2cedd43e3cbf17/: meta.yaml
mlruns/0/c2d923ad7ab744d390ff73f38c10f0ac/: meta.yaml
mlruns/0/c7dd14da95a34ef790bb6cea7231a85a/: meta.yaml
mlruns/0/c82f8e8b151644fd8f496bf1403f5252/: meta.yaml
mlruns/387568115636549974/: meta.yaml
mlruns/387568115636549974/16cfd9300b5d4f0a9bbd3e44c539e9fe/: meta.yaml
mlruns/387568115636549974/220d8591bb2d41a48fd81a110318f577/: meta.yaml
mlruns/387568115636549974/4a84ed5d4f634ea1956329426baf1d73/: meta.yaml
mlruns/387568115636549974/62f4f2de5b5442cab7d1e01716d76f7e/: meta.yaml
mlruns/387568115636549974/71ba61ec61444ee0b3b8d92fb9460c8f/: meta.yaml
mlruns/387568115636549974/94d8827ce25a4d3dbf2372c77e876e9a/: meta.yaml
mlruns/387568115636549974/9a7e6e2430b94d0d9b683e884608711a/: meta.yaml
mlruns/387568115636549974/a501f8a59f9a4c5f8c19843abaeba0a0/: meta.yaml
mlruns/387568115636549974/aaa27aef91634b658279ce3e11e39cc0/: meta.yaml
submissions/: submissions_2023-12-17_1.csv  submissions_lgbm_2023-12-18_2.csv  submissions_lgbm_2023-12-18_3.csv  submissions_stacking_2023-12-18_5.csv  submissions_xgb2023-12-18_1.csv
utils/: names.py
(+30 files in other folders)
