[tool.poetry]
name = "cirrhosis-classification"
version = "0.1.0"
description = "This package aims to predict  the the outcomes of patients with cirrhosis."
authors = ["Alexis Samaletis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.2"
mlflow = "^2.9.2"
plotly-express = "^0.4.1"
cufflinks = "^0.17.3"
chart-studio = "^1.1.0"
catboost = "^1.2.2"
xgboost = "^2.0.2"
lightgbm = "^4.1.0"
datetime = "^5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
